Adicionando coluna status

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.application.name=mylist
 server.servlet.context-path=/mylist
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://192.168.18.13:5432/mylist?currentSchema=mylist
-spring.datasource.username=markped
-spring.datasource.password=admin
+#spring.datasource.url=jdbc:postgresql://192.168.18.13:5432/mylist?currentSchema=mylist
+#spring.datasource.username=markped
+#spring.datasource.password=admin
+
+springdoc.packagesToScan=com.markdev.ws.mylist
 
 spring.flyway.enabled=true
